no longer displays About Me title on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -811,6 +811,27 @@ footer {
 
 /*
     -------------------------------
+    ----- 9.5. Contact Styles -----
+    -------------------------------
+*/
+
+#fun-facts {
+    padding: 75px 15px;
+    border-bottom: 1px solid $border;
+
+    h2 {
+        color: $heading;
+    }
+
+    p {
+        align-self: center;
+        color: $text;
+        margin: 0;
+    }
+}
+
+/*
+    -------------------------------
     ----- 10. Contact Styles -----
     -------------------------------
 */
@@ -967,6 +988,7 @@ and (max-device-width : 1024px)  {
         min-height: 500px;
         max-height: 1080px;
         padding: 80px 15px;
+        background-size: 100% auto;
     }
 
     #lead-content {
@@ -990,6 +1012,16 @@ and (max-device-width : 1024px)  {
 
     }
     #about {
+        display: flex;
+        text-align: left;
+
+        h2 {
+            align-content: center;
+            justify-content: center;
+        }
+
+    }
+    #fun-facts {
         display: flex;
         text-align: left;
 
@@ -1108,8 +1140,10 @@ and (max-device-width : 812px) {
     .social {
         text-align: center;
     }
-    .about-me {
-        display:none;
+    #about {
+        h2 {
+            display: none;
+        }
     }
 
 }
@@ -1138,8 +1172,10 @@ and (max-device-width : 736px) {
             animation: none !important;
         }
     }
-    .about-me {
-        display:none;
+    #about {
+        h2 {
+            display: none;
+        }
     }
     .profile-pic {
         display: none;
